migration, seeder and change multiplier to qty
